# MOKUKU-INS

./: CMakeLists.txt  README.md
3dof/: 3dof_kalman_filter.cc  3dof_kalman_filter.h  3dof_kalman_filter_main.cc  3dof_kalman_filter_mat.h  CMakeLists.txt  README.md
3dof/test_data/: odom.txt
6dof/: DERIVATION.md  README.md
